Get rid of deprecated newInstance call
Clarify the thrown exceptions of the createThinkTime method, while we
are here